--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,9 +1,13 @@
-.mapContainer{
-    height: 500px;
-    display: flex;
-    justify-content: center;
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-bottom: 100px;
-
+#mapid{ 
+    position: relative;
+    z-index: -1;
+    height: 100%;
+    width:100%;
+   
+    
 }
+
+.leaflet-container {
+    width: 100%;
+    height: 100%;
+  }
